--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "Eine Informationsvisualisierung der VBB-Fahrplandaten von Dezember 2014 bis Dezember 2015. ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "css": "gulp css",
+    "js": "gulp build-js",
+    "clean": "gulp clean",
+    "build": "gulp clean && (gulp css & gulp build-js)",
+    "start": " npm run build && (drudge -t -d build)"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sto3psl/InfoVis-VBB-Fahrplandaten-Starplot.git"
   },
   "keywords": [
     "infovis",
@@ -13,5 +22,43 @@
     "dresden"
   ],
   "author": "Fabian Gündel",
-  "license": "ISC"
+  "contributors": [
+    {
+      "name": "Erik Lier"
+    },
+    {
+      "name": "Oliver Lenz"
+    },
+    {
+      "name": "Lara Paeske"
+    },
+    {
+      "name": "Olga Davydkina"
+    }
+  ],
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer-core": "^5.1.11",
+    "browserify": "^10.1.3",
+    "css-mqpacker": "^3.1.0",
+    "cssnext": "^1.4.0",
+    "csswring": "^3.0.4",
+    "del": "^1.1.1",
+    "drudge": "^2.0.0",
+    "gulp": "^3.8.11",
+    "gulp-postcss": "^5.1.6",
+    "gulp-rename": "^1.2.2",
+    "jade": "^1.9.2",
+    "jadeify": "^4.3.0",
+    "postcss": "^4.1.9",
+    "postcss-import": "^5.2.2",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "ampersand-view": "^7.3.0",
+    "d3": "^3.5.5",
+    "domready": "^1.0.8",
+    "normalize.css": "^3.0.3",
+    "papaparse": "^4.1.1"
+  }
 }
