--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "ampersand-collection": "^1.4.5",
     "ampersand-model": "^5.0.3",
     "ampersand-view": "^7.3.0",
     "d3": "^3.5.5",
