--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "js": "gulp build-js",
     "clean": "gulp clean",
     "build": "gulp clean && (gulp css & gulp build-js)",
-    "start": " npm run build && (http-server build -p 3000)"
+    "start": "npm run watch-js & npm run watch-css & http-server build -p 3000",
+    "watch-js": "watchify index.js -d -o build/app.build.js",
+    "watch-css": "nodemon --watch style -e css --exec 'npm run css' "
+  },
+  "browserify": {
+    "transform": [
+      "jadeify"
+    ]
   },
   "repository": {
     "type": "git",
@@ -50,9 +57,11 @@
     "gulp-rename": "^1.2.2",
     "jade": "^1.9.2",
     "jadeify": "^4.3.0",
+    "nodemon": "^1.3.7",
     "postcss": "^4.1.9",
     "postcss-import": "^5.2.2",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1"
   },
   "dependencies": {
     "ampersand-collection": "^1.4.5",
