--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css": "gulp css",
-    "js": "gulp build-js",
+    "css": "cssnext -s -c style/style.css build/app.build.css",
+    "js": "browserify index.js -o build/app.build.js",
     "clean": "gulp clean",
-    "build": "gulp clean && (gulp css & gulp build-js)",
-    "start": "npm run watch-js & npm run watch-css & http-server build -p 3000",
+    "build": "gulp clean && (npm run css & npm run js)",
+    "start": "npm run watch-css & npm run watch-js & browser-sync start --files ./ --server build",
     "watch-js": "watchify index.js -d -o build/app.build.js",
     "watch-css": "nodemon --watch style -e css --exec 'npm run css' "
   },
@@ -46,21 +46,17 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-core": "^5.1.11",
+    "browser-sync": "^2.7.1",
     "browserify": "^10.1.3",
-    "css-mqpacker": "^3.1.0",
     "cssnext": "^1.4.0",
-    "csswring": "^3.0.4",
+    "csswring": "^3.0.5",
     "del": "^1.1.1",
-    "drudge": "^2.0.0",
     "gulp": "^3.8.11",
-    "gulp-postcss": "^5.1.6",
-    "gulp-rename": "^1.2.2",
     "jade": "^1.9.2",
     "jadeify": "^4.3.0",
     "nodemon": "^1.3.7",
-    "postcss": "^4.1.9",
+    "postcss": "^4.1.11",
     "postcss-import": "^5.2.2",
-    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
   },
   "dependencies": {
