--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
   "name": "infovis",
   "version": "1.0.0",
-  "description": "Eine Informationsvisualisierung der VBB-Fahrplandaten von Dezember 2014 bis Dezember 2015. ",
+  "description": "Eine Informationsvisualisierung der VBB-Fahrplandaten von Dezember 2014 bis Dezember 2015.",
   "main": "index.js",
   "scripts": {
+    "start": "npm run watch-css & npm run watch-js & browser-sync start --files ./build --server build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "css": "cssnext -s -c style/style.css build/app.build.css",
     "js": "browserify index.js -o build/app.build.js",
-    "clean": "gulp clean",
-    "build": "gulp clean && (npm run css & npm run js)",
-    "start": "npm run watch-css & npm run watch-js & browser-sync start --files ./ --server build",
     "watch-js": "watchify index.js -d -o build/app.build.js",
     "watch-css": "nodemon --watch style -e css --exec 'npm run css' "
-  },
-  "browserify": {
-    "transform": [
-      "jadeify"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/sto3psl/InfoVis-VBB-Fahrplandaten-Starplot.git"
   },
   "keywords": [
     "infovis",
     "gestaltung",
     "tu",
-    "dresden"
+    "dresden",
+    "starplot"
   ],
   "author": "Fabian Gündel",
   "contributors": [
@@ -45,24 +35,15 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer-core": "^5.1.11",
     "browser-sync": "^2.7.1",
-    "browserify": "^10.1.3",
+    "browserify": "^10.2.0",
     "cssnext": "^1.4.0",
-    "csswring": "^3.0.5",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "jade": "^1.9.2",
-    "jadeify": "^4.3.0",
     "nodemon": "^1.3.7",
     "postcss": "^4.1.11",
-    "postcss-import": "^5.2.2",
+    "standard": "^3.9.0",
     "watchify": "^3.2.1"
   },
   "dependencies": {
-    "ampersand-collection": "^1.4.5",
-    "ampersand-model": "^5.0.3",
-    "ampersand-view": "^7.3.0",
     "d3": "^3.5.5",
     "domready": "^1.0.8",
     "normalize.css": "^3.0.3",
