--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "d3": "^3.5.5",
     "domready": "^1.0.8",
     "normalize.css": "^3.0.3",
-    "papaparse": "^4.1.1",
-    "victor": "^0.2.6"
+    "papaparse": "^4.1.1"
   }
 }
