--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "watchify": "^3.2.1"
   },
   "dependencies": {
+    "babyparse": "^0.4.3",
     "d3": "^3.5.5",
     "domready": "^1.0.8",
     "normalize.css": "^3.0.3",
