--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cssnext": "^1.4.0",
     "nodemon": "^1.3.7",
     "postcss": "^4.1.11",
+    "replace": "^0.3.0",
     "standard": "^3.9.0",
     "watchify": "^3.2.1"
   },
