--- a/package.json
+++ b/package.json
@@ -35,20 +35,18 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "babyparse": "^0.4.3",
     "browser-sync": "^2.7.1",
     "browserify": "^10.2.0",
     "cssnext": "^1.4.0",
     "nodemon": "^1.3.7",
     "postcss": "^4.1.11",
-    "replace": "^0.3.0",
     "standard": "^3.9.0",
     "watchify": "^3.2.1"
   },
   "dependencies": {
-    "babyparse": "^0.4.3",
     "d3": "^3.5.5",
     "domready": "^1.0.8",
-    "normalize.css": "^3.0.3",
-    "papaparse": "^4.1.1"
+    "normalize.css": "^3.0.3"
   }
 }
