--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "watchify": "^3.2.1"
   },
   "dependencies": {
+    "array-uniq": "^1.0.2",
     "d3": "^3.5.5",
     "domready": "^1.0.8",
     "normalize.css": "^3.0.3"
