--- a/package.json
+++ b/package.json
@@ -35,22 +35,22 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "babyparse": "^0.4.3",
-    "browser-sync": "^2.7.1",
-    "browserify": "^10.2.0",
-    "cssnext": "^1.4.0",
-    "jade": "^1.11.0",
-    "jadeify": "^4.3.0",
-    "nodemon": "^1.3.7",
-    "postcss": "^4.1.11",
-    "standard": "^3.9.0",
-    "watchify": "^3.2.1"
+    "babyparse": "0.4.3",
+    "browser-sync": "2.7.1",
+    "browserify": "10.2.0",
+    "cssnext": "1.4.0",
+    "jade": "1.11.0",
+    "jadeify": "4.3.0",
+    "nodemon": "1.3.7",
+    "postcss": "4.1.11",
+    "standard": "3.9.0",
+    "watchify": "3.2.1"
   },
   "dependencies": {
-    "array-uniq": "^1.0.2",
-    "d3": "^3.5.5",
-    "domready": "^1.0.8",
-    "hammerjs": "^2.0.4",
-    "normalize.css": "^3.0.3"
+    "array-uniq": "1.0.2",
+    "d3": "3.5.5",
+    "domready": "1.0.8",
+    "hammerjs": "2.0.4",
+    "normalize.css": "3.0.3"
   }
 }
